# vector-playgrounds

./: README.md
cassio/: README.md  connect.py
flare/: README.md
hybrid-search/: README.md
langchainjs-typescript-examples/: .env.example  .gitignore  README.md  package.json  tsconfig.json
langchainjs-typescript-examples/src/: agents.ts  chain.ts  llm.ts  memory.ts  rag.ts
langstream/: README.md
scrapy/: README.md  requirements.txt
scrapy/postnl/: scrapy.cfg
scrapy/postnl/postnl/: items.py  middlewares.py  pipelines.py  settings.py
scrapy/postnl/postnl/spiders/: example.py
streamlit-langchain/: .gitignore  rag_app.py  requirements.txt
vector-mongodb/: README.md
vector-neo4j/: README.md
vector-pgvector/: README.md
vector-qdrant/: .env.example  .gitignore  README.md  dbpedia_ingest_points_parallel.py  dbpedia_search.py  docker-compose.yaml  pyproject.toml
vector-qdrant/attic/: batch.py  dbpedia_ingest_points.py  generate_movie_data.py  qdrant_ingest.py  sparse.py
vector-qdrant/attic/data/: movies.json
vector-qdrant/config/: grafana-dashboard.yaml  grafana-prometheus.yaml
vector-redis/: README.md
vector-weaviate/: README.md
